2020-06-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (Process_Event) Handle resizing.
	* src/ftdiff.c (main): Ditto.

2020-06-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Fix color management bugs including `ftmulti'.

	* graph/gblblit.c (grSetTargetPenBrush): New function to manage color
	and other parameters required for direct rendering.
	(grBlitGlyphToSurface): Use it here to decode color only.
	* src/ftcommon.h (FTDemo_Sketch_Glyph_Color): Use it here in full.
	* graph/graph.h: Update docs.

2020-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftstring,ftview] Avoid uninitialized `event.type'.

	* src/ftgrid.c, src/ftstring.c, src/ftview.c (Process_Event): Updated.

2020-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (event_gamma_grid): Fix oscure resizing crash.

2020-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (Process_Event): Process resizing.

2020-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_init): Remove some settings.

2020-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Miscellaneous clean-ups.

	* graph/win32/grwin32.c
	(gr_win32_surface_refresh_rect): Don't `UpdateWindow' and move
	`ShowWindow' from here...
	(gr_win32_surface_init): ... to here.
	(gr_win32_surface_listen_event): Make sure size really changes and
	move `SetWindowText' from here...
	(gr_win32_surface_set_title): ...to here.

2020-05-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Name): Fix timestamps on Windows.

2020-05-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c: Center and clip the bitmap to fix resizing.

2020-05-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Stop double-dealing BackSpace, Tab, Return, and Esc.

	* graph/x11/grx11.c (gr_x11_surface_listen_event): Do not reset the
	cursor prematurely.

2020-05-27  Alexei Podtelezhnikov  <apodtele@gmail.com>
