@@ -1,3 +1,7 @@
+2020-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* graph/x11/grx11.c (gr_x11_surface_listen_event): No need to flush.
+
 2020-06-07  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftmulti.c (Process_Event) Handle resizing.
